# fdtd_solver

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  GDSIIgeom.cpp  adjust_verbosity.hpp  array_slice.cpp  bands.cpp  bicgstab.cpp  bicgstab.hpp  boundaries.cpp  casimir.cpp  cw_fields.cpp  dft.cpp  dft_ldos.cpp  energy_and_flux.cpp  fields.cpp  fields_dump.cpp  fix_boundary_sources.cpp  h5fields.cpp  h5file.cpp  initialize.cpp  integrate.cpp  integrate2.cpp  loop_in_chunks.cpp  material_data.cpp  material_data.hpp  meep.hpp  meep_internals.hpp  meepgeom.cpp  meepgeom.hpp  monitor.cpp  mpb.cpp  mt19937ar.cpp  multilevel-atom.cpp  mympi.cpp  near2far.cpp  random.cpp  sources.cpp  sphere-quad.cpp  sphere-quad.h  step.cpp  step_db.cpp  (+10 more)
src/meep/: meep-config.h  mympi.hpp  vec.hpp
tests/: CMakeLists.txt  hello.cpp  hello_meep.cpp  make_structure.cpp  material_lib.hpp
